--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -697,7 +697,7 @@ transition: .3s;
 .shopping-cart-container:after {
 	float: left;
 	bottom: 100%;
-	right: 30%;
+	right: 39%;
 	border: solid transparent;
 	content: " ";
 	height: 0;
@@ -1049,6 +1049,7 @@ fieldset {
   opacity: 0;
 }
 .checkbox .helper::before {
+	margin-right: auto;
   top: 0.65rem;
   right: 0.38rem;
   -webkit-transform: rotate(-135deg);
@@ -1056,6 +1057,7 @@ fieldset {
   box-shadow: 0 0 0 0.0625rem #fff;
 }
 .checkbox .helper::after {
+margin-right: 9px;
   top: 0.3rem;
   right: 0;
   -webkit-transform: rotate(-45deg);
@@ -1637,39 +1639,127 @@ height: 100px !important;
 }
 
 
+.range {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  position: relative;
+  width: auto;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  background: rgba(59,173,227,1);
+  background: -moz-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(59,173,227,1)), color-stop(25%, rgba(87,111,230,1)), color-stop(51%, rgba(152,68,183,1)), color-stop(100%, rgba(255,53,127,1)));
+  background: -webkit-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: -o-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: -ms-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3bade3 ', endColorstr='#ff357f ', GradientType=1 );
+  height: 2px;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-moz-range-track {
+  -moz-appearance: none;
+  background: rgba(59,173,227,1);
+  background: -moz-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(59,173,227,1)), color-stop(25%, rgba(87,111,230,1)), color-stop(51%, rgba(152,68,183,1)), color-stop(100%, rgba(255,53,127,1)));
+  background: -webkit-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: -o-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: -ms-linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  background: linear-gradient(45deg, rgba(59,173,227,1) 0%, rgba(87,111,230,1) 25%, rgba(152,68,183,1) 51%, rgba(255,53,127,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3bade3 ', endColorstr='#ff357f ', GradientType=1 );
+  height: 2px;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  max-width: 80px;
+  position: relative;
+  bottom: 11px;
+  background-color: #1d1c25;
+  cursor: -webkit-grab;
+
+  -webkit-transition: border 1000ms ease;
+  transition: border 1000ms ease;
+}
+
+input[type=range]::-moz-range-thumb {
+  -moz-appearance: none;
+  border: 2px solid;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+  max-width: 80px;
+  position: relative;
+  bottom: 11px;
+  background-color: #1d1c25;
+  cursor: -moz-grab;
+  -moz-transition: border 1000ms ease;
+  transition: border 1000ms ease;
+}
 
 
 
+.range.blue::-webkit-slider-thumb {
+   border-color: rgb(59,173,227);
+}
 
+.range.ltpurple::-webkit-slider-thumb {
+   border-color: rgb(87,111,230);
+}
 
+.range.purple::-webkit-slider-thumb {
+   border-color: rgb(152,68,183);
+}
 
+.range.pink::-webkit-slider-thumb {
+   border-color: rgb(255,53,127);
+}
 
+.range.blue::-moz-range-thumb {
+   border-color: rgb(59,173,227);
+}
 
+.range.ltpurple::-moz-range-thumb {
+   border-color: rgb(87,111,230);
+}
 
+.range.purple::-moz-range-thumb {
+   border-color: rgb(152,68,183);
+}
 
+.range.pink::-moz-range-thumb {
+   border-color: rgb(255,53,127);
+}
 
+input[type=range]::-webkit-slider-thumb:active {
+  cursor: -webkit-grabbing;
+}
 
+input[type=range]::-moz-range-thumb:active {
+  cursor: -moz-grabbing;
+}
 
+.keep-it-tight {
 
+transform: translateY(-2px);
 
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.side-bar {
+  position: -webkit-sticky !important;
+  position: sticky !important;
+  top: 3% !important;
+}
 
 
 
@@ -1821,6 +1911,17 @@ display: none;
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 992px) {
 
+	/*delete this in case of fire */
+
+
+	.hide-between {
+
+display: none;
+
+	}
+
+		/*delete this in case of fire */
+
 	.dropdown-menu {
 
 		text-align: center;
@@ -1893,4 +1994,6 @@ display: none;
 		display: none;
 
 	}
+
+
 }
