single page 75% done (TODO : comment section)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1920,27 +1920,9 @@ background-color: black !important;
     border-color: black !important;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.no-bulls {
+  list-style-type: none;
+}
 
 
 
